--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
     <head>
     <meta charset="UTF-8">
     <meta content="clickberry-extension-here">
-    <title>С 8 Марта</title>
+    <title>С 8 Марта, Милая!</title>
     <link href="https://fonts.googleapis.com/css?family=Marck+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pattaya" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Wendy+One" rel="stylesheet">
-    <script type="text/javascript" src="chrome-extension://bfbmjmiodbnnpllbbbfblcplfjjepjdn/js/injected.js"></script>
-    <script type="text/javascript" src="script.js"></script>
     <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
         
+        <embed src="music.mp3" autostart="true" hidden="true" loop="true"> </embed>
+
         <div class="container">
 
             <div class="balloon">
@@ -36,51 +36,64 @@
             <table>
                 <tr>
                     <td class="leftCells">
-                            Закрыв глаза, ты в мире всех чудес!<br>
-                            Тебе подвластны все миры и грезы,<br>
-                            Ты полетишь с земли и до небес,<br>
-                            И не узнаешь, что такое слезы.<br> <br> 
-                            Ты в мире том, где нет вражды,<br>
-                            Где страх уходит навсегда,<br>
-                            Ты не узнаешь горести беды,<br>
-                            Ты там, где вечно плещется вода.<br>
+                            В светлый праздник сей<br>
+                            Дарю тебя слова любви!<br>
+                            Не знаю я души светлей,<br>
+                            В моей душе горят огни.<br>
+                            <br>
+                            Ты как богиня наяву!<br>
+                            Сошла с небес на землю к нам,<br>
+                            Я лишь тебя одну люблю!<br>
+                            Тебе я жизнь свою отдам!
                         </td>
                     <td class="leftCells">
-                            <img src="Yana1.png" alt="photo" id="yanaPhoto1">
+                            <img src="photo1.png" alt="photo" id="yanaPhoto1">
                     </td>
                 </tr>
-                <br>
-
-                
-
-
                 <br>
                 <tr>
                     <td class="rightCells">
-                            <img src="Yana2.png" alt="photo" id="yanaPhoto2">
+                            <img src="photo2.png" alt="photo" id="yanaPhoto2">
                         </td>
                     <td class="rightCells">
-                            Твой мир прекрасней всех миров!<br>
-                            Ты улыбнулась мне во сне,<br>
-                            Я берегу твой сон от всех воров,<br>
-                            Спи сладко и доверься мне!<br>
+                            Весна в душе, она везде!<br>
+                            Тепло пришло из далека,<br>
+                            Тепло я это нёс тебе,<br>
+                            Пускай оттают берега,<br>
                             <br>
-                            Я здесь, я рядом, очи не сомкну,<br>
-                            Твой сладкий сон не потревожу,<br>
-                            Я сновидение твое сберегу,<br>
-                            Тебя я ни за что не брошу!<br>
+                            Пускай меж нами расстояния,<br>
+                            Пускай, меж нами города -<br>
+                            Тебя люблю до без сознания!<br> 
+                            Я сердце отдал навсегда!
                     </td>
                 </tr>
-
+                <br>
+                <tr>
+                     <td class="leftCells">
+                        Люблю твой голос золотой,<br>
+                        Люблю смотреть я на тебя,<br>
+                        В душе моей царит покой,<br>
+                        Ведь полюбила ты меня!<br>
+                        <br>
+                        Я обниму тебя душой,<br> 
+                        И защищу от всяких бед!<br>
+                        Я весь пленён, пленён тобой!<br>
+                        Другой как ты - на свете нет!
+                    </td>
+                    <td class="leftCells">
+                            <img src="photo3.png" alt="photo" id="yanaPhoto3">
+                    </td>
+                </tr>
+                <br>
                 <tr>
                         <td>
                             <div class="cart-wrapper">
-                                    <div class="cart">
+                                <div class="cart">
                                     <div class="front">
-                                            <img src="we.png" alt="photo" class="photo"/>
+                                            <img src="mainPhoto.png" alt="photo" id="mainPhoto"/>
                                     </div>
                                     <div class="back">
-                                            <img src="love.png" alt="photo" class="photo">
+                                            <img src="love.png" alt="photo" id="backMainPhoto">
                                     </div>
                                 </div>
                             </div>
